+advertisement deletion
